--- a/Sorular/BMS-2015.md
+++ b/Sorular/BMS-2015.md
@@ -1,241 +1,247 @@
 
 ####1-	İlk öğretim öğrencilerinin aritmetiği ve matematiği öğrendiği aletin adı nedir?
 
- **A) Abaküs**
- B) Fark Makinası
- C) Pascalline
- D) IBM
-
+ **A) Abaküs**<br>
+ B) Fark Makinası<br>
+ C) Pascalline<br>
+ D) IBM<br>
+ <br>
 #### 2-Sadece toplama ve çıkarma işlemini yapan ünlü bir matematikçinin yaptığı makinenin adı nedir?
 
-A)Leibniz Çarkı
-B)Fark makinası
-C)Abaküs
-**D)Pascalline**
-
+A)Leibniz Çarkı<br>
+B)Fark makinası<br>
+C)Abaküs<br>
+**D)Pascalline**<br>
+<br>
 #### 3-İlk programcının adı nedir?
-A)Bill Gates
-B)Steve Jobs
-C)Ada Lovelace
-D)Blaise Pascal
+A)Bill Gates<br>
+B)Steve Jobs<br>
+C)Ada Lovelace<br>
+D)Blaise Pascal<br>
 
 #### 4-İlk bilgisayarın adı nedir?
-A)ENIAC
-B)UNIVAC
-C)MARK1
-D)EDVAC
+A)ENIAC<br>
+B)UNIVAC<br>
+C)MARK1<br>
+D)EDVAC<br>
 
 #### 5-Entegre devre elemanlarının kullanıldığı ilk bilgisayar hangisidir?
 
-A)	IBM 360
-B) IBM 700 SERİSİ
-C) EDVAC
-D) UNIVAC
+A)	IBM 360<br>
+B) IBM 700 SERİSİ<br>
+C) EDVAC<br>
+D) UNIVAC<br>
 
 #### 6-Aşağıdaki veri yollarından hangisi sadece ekran kartları içindir ?
-A)	AGP
-B)	ISA
-C)	PCI
-D)	PCI-x
-
+A)	AGP<br>
+B)	ISA<br>
+C)	PCI<br>
+D)	PCI-x<br>
 
 #### 7-Hangisi bir anakart türü degildir?
 
-A)	AT
-B)	ATX
-C)	BT
-D)	BTX
+A)	AT<br>
+B)	ATX<br>
+C)	BT<br>
+D)	BTX<br>
 
 #### 8-Aşağıdakilerden hangisi form factor (anakart boyutları) değildir?
 
-A)	ATX
-B)	AGP
-C)	Mini-ATX
-D)	BTX
+A)	ATX<br>
+B)	AGP<br>
+C)	Mini-ATX<br>
+D)	BTX<br>
 
 #### 9-Bilgisayarın tüm parçalarının takıldığı donanım birimi asağıdakilerden hangisidir?
 
-a)	Anakart
-b)	Ses Kartı
-c)	İşlemci
-d)	Ekran Kartı
+a)	Anakart<br>
+b)	Ses Kartı<br>
+c)	İşlemci<br>
+d)	Ekran Kartı<br>
 
 #### 10-Anakartın beynini oluşturan entegre devre hangisidir?
 
-a)	ISA
-b)	PCI
-c)	Veri Yolu
-d)	Yonga Seti
+a)	ISA<br>
+b)	PCI<br>
+c)	Veri Yolu<br>
+d)	Yonga Seti<br>
 
 #### 11-Aşağıdakilerden hangisi bilgisayarı virüslere karşı korur ?
 
-A ) FireWall
-B ) Modem
-C ) WinRAR
-**D ) Antivirüs**
+A ) FireWall<br>
+B ) Modem<br>
+C ) WinRAR<br>
+**D ) Antivirüs**<br>
 
 #### 12-Aşağıdakilerden hangisi 0-day virüslerini engelleyebilir ?
 
-A ) İmza tespiti
-B ) Bulut tespiti
-**C ) Davranışsal tespit**
-D ) Hiçbiri
+A ) İmza tespiti<br>
+B ) Bulut tespiti<br>
+**C ) Davranışsal tespit**<br>
+D ) Hiçbiri<br>
 
 #### 13-FireWall güvenlik anlamında aşağıdakilerden hangisini  yapar ?
 
-A ) Güvenli şekilde port açar
-**B ) Bilgisayarı karşı makinelerden gelecek saldırıya karşı  korur**
-C ) Bilgisayardaki aktif bağlantıları görüntüler
-D ) Bilgisayardaki tüm bağlantıları keser
+A ) Güvenli şekilde port açar<br>
+**B ) Bilgisayarı karşı makinelerden gelecek saldırıya karşı  korur**<br>
+C ) Bilgisayardaki aktif bağlantıları görüntüler<br>
+D ) Bilgisayardaki tüm bağlantıları keser<br>
+
 #### 14-Daktiloyla benzer çalışma mantığına sahip olan yazıcı hangisidir?
 
-**A) Nokta Vuruşlu**
-B) Mürekkep Püskürtmeli
-C) Lazer
-D) Termal
-E) 3D Yazıcı
+**A) Nokta Vuruşlu**<br>
+B) Mürekkep Püskürtmeli<br>
+C) Lazer<br>
+D) Termal<br>
+E) 3D Yazıcı<br>
 
 #### 15-ATM çıktıları, biletler, pos kâğıtları vb. baskı işlerinde kullanılan yazıcı hangisidir?
 
-A) Nokta Vuruşlu
-B) Mürekkep Püskürtmeli
-C) Lazer
-**D) Termal**
-E) 3D Yazıcı
+A) Nokta Vuruşlu<br>
+B) Mürekkep Püskürtmeli<br>
+C) Lazer<br>
+**D) Termal**<br>
+E) 3D Yazıcı<br>
 
 #### 16-Dijital üç boyutlu bir dosyadan üç boyutlu katı bir nesne yapan makinelere ne ad verilir?
 
-A) Cep Telefonu
-B) Lazer Yazıcı
-C) Projeksiyon cihazı
-D) El Feneri
-**E) 3D Yazıcı**
+A) Cep Telefonu<br>
+B) Lazer Yazıcı<br>
+C) Projeksiyon cihazı<br>
+D) El Feneri<br>
+**E) 3D Yazıcı**<br>
 
 #### 17-Aşağıdakilerden hangisi Arama Motorlarının temel elemenlarındandan değildir ?
-A)Spider
-B)Veritabanı
-C)Sıralama Mekanizması
-D)Crawler
-**E)HTML**
+A)Spider<br>
+B)Veritabanı<br>
+C)Sıralama Mekanizması<br>
+D)Crawler<br>
+**E)HTML**<br>
 
 #### 18-Aşağıdakilerden hangisi Arama Motoru Türü değildir?
 
-A)	Robotlu Arama
-B)	Editörün Seçtikleri
-C)	Portal Yapısında Arama
-D)	Akıllı Arama
-**E)	Elle Arama**
+A)	Robotlu Arama<br>
+B)	Editörün Seçtikleri<br>
+C)	Portal Yapısında Arama<br>
+D)	Akıllı Arama<br>
+**E)	Elle Arama**<br>
 
 #### 19-Aşağıdakilerden hangisi bir web arama motoru değildir?
 
-A)	Google
-B)	Yahoo
-C)	Bing
-D)	Yandex
-**E)	Amazon**
+A)	Google<br>
+B)	Yahoo<br>
+C)	Bing<br>
+D)	Yandex<br>
+**E)	Amazon**<br><br>
 
 #### 20-Masa üstünde Pazar payının %85-90 üzeri olduğu bilinen işletim sistemi hangisidir?
-A)LİNUX
-B)Android
-C)Mac OS x
-**D)Windows**
+A)LİNUX<br>
+B)Android<br>
+C)Mac OS x<br>
+**D)Windows**<br>
 
 #### 21-Ağustos 1995 piyasa sürülen satış rekorları kıran ve Microsoft ‘u   dünya devi yapan sürüm hangisidir?
 
-A)Windows 1.0
-B)Windows NT
-**C)Windows 95**
-D)Windows 98
+A)Windows 1.0<br>
+B)Windows NT<br>
+**C)Windows 95**<br>
+D)Windows 98<br>
 
 #### 22-Windows XP’ nin renk teması aşağıdakilerden hangisidir?
-A)Beyaz
-B)Sarı
-**C)Mavi**
-D)Siyah
+A)Beyaz<br>
+B)Sarı<br>
+**C)Mavi**<br>
+D)Siyah<br>
 
 #### 23-Aşağıdakilerden hangisi 1959 yılında Grace Hopper tarafından geliştirilen dildir?
 
-a-)C #
-b-) LISP
-c-) PHP
-**d-)COBOL**
-e-)C++
+a-)C #<br>
+b-) LISP<br>
+c-) PHP<br>
+**d-)COBOL**<br>
+e-)C++<br>
 
 #### 24-şağıdakilerden hangisi C dilinin içinde bulunduğu seviyedir ?
 
-a-) Alt Seviye Diller
-**b-) Orta Seviye Diller**
-c-) Üst Seviye Diller
-d-)Yapay Diller
-e-)En Üst Seviye Diller
+a-) Alt Seviye Diller<br>
+**b-) Orta Seviye Diller**<br>
+c-) Üst Seviye Diller<br>
+d-)Yapay Diller<br>
+e-)En Üst Seviye Diller<br>
 
 #### 25-Aşağıdakilerden hangisinde en hızlı ve etkili programlama dilleri bulunur ?
 
-a-) Alt Seviye Diller
-b-) Orta Seviye Diller
-**c-) Üst Seviye Diller**
-d-)Yapay Diller
-e-)En Üst Seviye Diller
+a-) Alt Seviye Diller<br>
+b-) Orta Seviye Diller<br>
+**c-) Üst Seviye Diller**<br>
+d-)Yapay Diller<br>
+e-)En Üst Seviye Diller<br>
 
 #### 26-)  I-HDD      II-RAM      III-Flash Bellek
 Yukarılardan hangileri kalıcı hafıza elemanıdır?  
-A) Yalnız I    B) II – III   C) I – II   **D) I – III**  
+A) Yalnız I<br>
+B) II – III<br>
+C) I – II<br>
+**D) I – III**  <br>
 
 #### 27-) Hangisi disk değildir?
-A) SSD   B) Floppy   C) USB-HDD   **D) ROM**
+A) SSD   <br>
+B) Floppy   <br>
+C) USB-HDD   <br>
+**D) ROM**<br>
 
 #### 28-) Hangisi yanlıştır?
 
-A)  Floppy diskler, disketi ifade eder.
-**B)  Cd ler disketler den daha pahalıdır.**
-C) Disket ile HDDler, manyetik ortama sahiptir.
-D)  Disketlerde veriler sektörlere yazılır.
+A)  Floppy diskler, disketi ifade eder.<br>
+**B)  Cd ler disketler den daha pahalıdır.**<br>
+C) Disket ile HDDler, manyetik ortama sahiptir.<br>
+D)  Disketlerde veriler sektörlere yazılır.<br>
 
 #### 29)	Aşağıdakilerden hangisi  8.Nesil oyun konssolurdur?
 
 **A=Xbox One**
-B=NES
-C=Joy Stick
-D=Pod
-E=Mega Drive
+B=NES<br>
+C=Joy Stick<br>
+D=Pod<br>
+E=Mega Drive<br>
 
 #### 30)	Aşağıdakilerden hangisi Oyun Motoru değildir?
-A= Unity 3D
-B=CryEngine 3
-C=Blender
-D=Game Maker
-**E=Playstation**
+A= Unity 3D<br>
+B=CryEngine 3<br>
+C=Blender<br>
+D=Game Maker<br>
+**E=Playstation**<br>
 
 #### 31)	Aşağıdakilerden birFutbol oyunudur?
 
-**A) FİFA**
-B) Call of Duty
-C) Battlefiled
-D) Yüzüklerin Efendisi
-E) Age of Empires
+**A) FİFA**<br>
+B) Call of Duty<br>
+C) Battlefiled<br>
+D) Yüzüklerin Efendisi<br>
+E) Age of Empires<br>
 
 #### 32.) Aşağıdakilerden hangisi bir yazılım yaşam döngüsü temel adımlarından biri değildir?
-A)Planlama
-B)Analiz
-**C)Tekrar**
-D)Gerçekleştirim
-E)Tasarım
+A)Planlama<br>
+B)Analiz<br>
+**C)Tekrar**<br>
+D)Gerçekleştirim<br>
+E)Tasarım<br>
 
 #### 33.) Aşağıdakilerden hangisi bir kutu yaklaşımıdır?
 
-A)Kırmızı kutu yaklaşımı
-B)Mavi kutu yaklaşımı
-C)Yeşil kutu yaklaşımı
-**D)Beyaz kutu yaklaşımı**
-E)Sarı kutu yaklaşımı
+A)Kırmızı kutu yaklaşımı<br>
+B)Mavi kutu yaklaşımı<br>
+C)Yeşil kutu yaklaşımı<br>
+**D)Beyaz kutu yaklaşımı**<br>
+E)Sarı kutu yaklaşımı<br>
 
 #### 34.) Aşağıdakilerden hangisi işlevsel olmayan testlerden değildir?
 
-A)Başarım Testi
-B)Kararlılık Testi
-C)Kullanışlılık Testi
-D)Yük Testi
-**E)Barok testi**
+A)Başarım Testi<br>
+B)Kararlılık Testi<br>
+C)Kullanışlılık Testi<br>
+D)Yük Testi<br>
+**E)Barok testi**<br>
 
 #### 35-) Yıldız (star) topolojisinin şekli şağıdakilerden hangisidir?
 
@@ -243,35 +249,35 @@ D)Yük Testi
 
 #### 36-) Aşağıdakilerden hangisi bilgisayar ağlarının avantajlarından değildir?
 
-a-Ortak donanım kullanımı
-b-Ortak çalışma
-**c-Bireysel çalışma**
-d-Zaman ve para kazancı
-e-Bir veri tabanının değişik bilgisayarlar tarafından kullanımı
+a-Ortak donanım kullanımı<br>
+b-Ortak çalışma<br>
+**c-Bireysel çalışma**<br>
+d-Zaman ve para kazancı<br>
+e-Bir veri tabanının değişik bilgisayarlar<br> tarafından kullanımı<br>
 
 #### 37-) Aşağıdakilerden hangi kablo türü en hızlı veri iletimi sağlar?
 
-a-UTP
-b-koaksiel
-c-telefon kablosu
-d-BNC
-**e-fiber optik kablo**
+a-UTP<br>
+b-koaksiel<br>
+c-telefon kablosu<br>
+d-BNC<br>
+**e-fiber optik kablo**<br>
 
 #### 38-)Bilgisayar karşısında otururken ekrana olan uzaklığımız ne kadar olmalıdır?
 
-a-)10-20 cm
-b-)20-40 cm
-**c-)45-75 cm**
-d-)75-90 cm
-e-)90-110 cm
+a-)10-20 cm<br>
+b-)20-40 cm<br>
+**c-)45-75 cm**<br>
+d-)75-90 cm<br>
+e-)90-110 cm<br>
 
 #### 39-)Bilgisayar karşısında otururken dizlerimizin açısı kaç derece olmalıdır?
 
-a-)30-60
-b-)60-90
-**c-)90-110**
-d-)110-150
-e-)150-180
+a-)30-60<br>
+b-)60-90<br>
+**c-)90-110**<br>
+d-)110-150<br>
+e-)150-180<br>
 
 #### 40-)
 1. Sağlık sadece bedensel sağlık değil ruhsal ve sosyal sağlık olarak da ifade edilir.
@@ -279,247 +285,250 @@ e-)150-180
 3. Gelişen teknolojiyle beraber bilgisayarların  insan  sağlığına olan zararları da artmaktadır.
 Yukarıdaki yargıların hangisi yada hangileri kesinlikle doğrudur?
 
-**a-)Yalnız  1**
-b-)Yalnız  2
-c-)Yalnız  3
-d-)1  ve  2
-e-)1 , 2  ve  3
+<br>
+**a-)Yalnız  1**<br>
+b-)Yalnız  2<br>
+c-)Yalnız  3<br>
+d-)1  ve  2<br>
+e-)1 , 2  ve  3<br>
 
 #### 41)	Sayısal görüntünün en küçük birimine ne ad verilir?
-A) Pixel       B)MB         C) Rpm        D) Dpi
+A) Pixel<br>       B)MB <br>        C) Rpm<br>        D) Dpi<br>
 
 #### 42)	Aşağıdakilerden hangisi görüntü işlemenin tanımıdır?
 
-A.	Ölçülmüş veya kaydedilmiş olan elektronik görüntü verilerini ,elektronik ortamda (bilgisayar ve yazılımlar yardımı ile) amaca uygun şekilde değiştirmeye yönelik yapılan bilgisayar çalışması.
-B.	Gerçek yaşamdaki üç boyutlu nesnelerden oluşan sahnenin basit iki değişkenli bir fonksiyon olarak tanımlanmasıdır.
-C.	Üç boyutlu görünümün iki boyut üzerindeki haritası olarak tarif edilebilir.
-D.	Resimlerin analog ortamlardan sayısal ortamlara geçirilmesi süreci sonrasında yeni oluşan görüntü, bozukluk içerir ve bu durum görüntü işleme olarak adlandırılır.
+A.	Ölçülmüş veya kaydedilmiş olan elektronik görüntü verilerini ,elektronik ortamda (bilgisayar ve yazılımlar yardımı ile) amaca uygun şekilde değiştirmeye yönelik yapılan bilgisayar çalışması.<br>
+B.	Gerçek yaşamdaki üç boyutlu nesnelerden oluşan sahnenin basit iki değişkenli bir fonksiyon olarak tanımlanmasıdır.<br>
+C.	Üç boyutlu görünümün iki boyut üzerindeki haritası olarak tarif edilebilir.<br>
+D.	Resimlerin analog ortamlardan sayısal ortamlara geçirilmesi süreci sonrasında yeni oluşan görüntü, bozukluk içerir ve bu durum görüntü işleme olarak adlandırılır.<br>
 
 #### 43)Filtreleme ile ilgili aşağıdakilerden hangisi yanlıştır?
 
-A) Filtreler görüntü zenginleştirme amacı ile uygulanan, görüntüde belirli ayrıntıların ayıklanması ya da daha belirgin hale getirilmesi vb. gibi operasyonları gerçekleştiren operatörlerdir.  
-B) Filtreleme resmin üzerinde bir filtre varmış gibi düşünüp her piksel değerinin yeniden hesaplanmasıdır.
-C) Filtreler sayesinde girdi resminden yeni resim değişik efektler verilerek elde edilir.
-D)Farklı amaçlar için farklı filtreleme operatörleri yoktur. Tek filtreleme operatörü bulunmaktadır.
-E)Medyan Filtreleme merkezi bizim pikselimiz olan bir bölgenin çevresindeki piksellerin medyanlarının alınmasına dayanır.
+A) Filtreler görüntü zenginleştirme amacı ile uygulanan, görüntüde belirli ayrıntıların ayıklanması ya da daha belirgin hale getirilmesi vb. gibi operasyonları gerçekleştiren operatörlerdir.<br>
+B) Filtreleme resmin üzerinde bir filtre varmış gibi düşünüp her piksel değerinin yeniden hesaplanmasıdır.<br>
+C) Filtreler sayesinde girdi resminden yeni resim değişik efektler verilerek elde edilir.<br>
+D)Farklı amaçlar için farklı filtreleme operatörleri yoktur. Tek filtreleme operatörü bulunmaktadır.<br>
+E)Medyan Filtreleme merkezi bizim pikselimiz olan bir bölgenin çevresindeki piksellerin medyanlarının alınmasına dayanır.<br>
 
 #### 44-)Gnu felsefesi neyi savunmaz?
-a-)Kullanıcı, yazılımı her türlü amaç için kullanmakta özgürdür.
-b-)Kendi ihtiyaçlarına göre yazılım üzerinde değişiklik yapmakta özgürdür.
-c-)Kişi elindeki yazılımı dağıtmakta ve toplum ile paylaşmakta özgürdür.
-**d-) Kişiler beğendiği yazılımlar üzerinde hak iddaa etmekte özgürdür.**
-e-) Kişi değiştirdiği programı dağıtıp, paylaşmakta özgürdür.
+a-)Kullanıcı, yazılımı her türlü amaç için kullanmakta özgürdür.<br>
+b-)Kendi ihtiyaçlarına göre yazılım üzerinde değişiklik yapmakta özgürdür.<br>
+c-)Kişi elindeki yazılımı dağıtmakta ve toplum ile paylaşmakta özgürdür.<br>
+**d-) Kişiler beğendiği yazılımlar üzerinde hak iddaa etmekte özgürdür.**<br>
+e-) Kişi değiştirdiği programı dağıtıp, paylaşmakta özgürdür.<br>
 
 #### 45-) Hangisi açık kaynak kodlu yazılımın bir özelliği değildir?
 
-a-) Birçok işletim sisteminden daha güvenlidir..
-b-)Eksiklikleri hızla giderilir.
-c-)Bir çoğu ücretsizdir.
-d-)Kodları incelemek için bir fırsat sunar.
-**e-)Yüksek donanım performansı gerektirmez.**
+a-) Birçok işletim sisteminden daha güvenlidir.<br>
+b-)Eksiklikleri hızla giderilir.<br>
+c-)Bir çoğu ücretsizdir.<br>
+d-)Kodları incelemek için bir fırsat sunar.<br>
+**e-)Yüksek donanım performansı gerektirmez.**<br>
 
-46-) Linux hangi işletim sisteminin türevidir?
+#### 46-) Linux hangi işletim sisteminin türevidir?<br>
 
-**a-) Unix**
-b-) GNU
-c-) ASP
-d-) GNU/Linux
-e-) Mac
+**a-) Unix**<br>
+b-) GNU<br>
+c-) ASP<br>
+d-) GNU/Linux<br>
+e-) Mac<br>
 
-47-) Linux kim tarafından geliştirilmiştir ?
+#### 47-) Linux kim tarafından geliştirilmiştir ?
 
-a-) Richard Stallman
-b-) Alan Tureng
-**c-) Linus Torvalds**
-d-) Steve Wozniak
-e-) Gary Kildall
+a-) Richard Stallman<br>
+b-) Alan Tureng<br>
+**c-) Linus Torvalds**<br>
+d-) Steve Wozniak<br>
+e-) Gary Kildall<br>
 
 #### 48-) Açık kaynak kodlu yazılımların avantajlarından biri hangisi değildir?
 
-a-) Ekonomik olması
-b-) Yüksek performanslı donanım gerektirmemesi
-c-) Güvenilir olması
-d-) Çok sayıda gönüllü destek alması
-**e-) Kullanış açısından çok kolay olması**
+a-) Ekonomik olması<br>
+b-) Yüksek performanslı donanım gerektirmemesi<br>
+c-) Güvenilir olması<br>
+d-) Çok sayıda gönüllü destek alması<br>
+**e-) Kullanış açısından çok kolay olması**<br>
 
 #### 49-)Aşağıdakilerden hangisi yapay zekanın alt dallarından biri değildir?
 
-a-)Bulanık Mantık
-b-)Yapay Sinir Ağları
-c-)Genetik Algoritma
-d-)Makine Zekası
-**e-)Gömülü Sistemler**
+a-)Bulanık Mantık<br>
+b-)Yapay Sinir Ağları<br>
+c-)Genetik Algoritma<br>
+d-)Makine Zekası<br>
+**e-)Gömülü Sistemler**<br>
 
 #### 50-) Aşağıdakilerden hangisi tasarımcısı John McCarthy olan ve yapay zeka programlamak için kullanılan dildir?
 
-a-) HTML
-b-)ASP.NET
-**c-)LISP**
-d-)PYHTON
-e-)MSUIS
+a-) HTML<br>
+b-)ASP.NET<br>
+**c-)LISP**<br>
+d-)PYHTON<br>
+e-)MSUIS<br>
 
 #### 51-) Aşağıdakilerden hangisi sibernetikten etkilenen bir çalışma alanı değildir?
 
-a-)Sistem teorisi
-b-)Oyun Teorisi
-c-) Algısal Kontrol teorisi
-d-) Nöropsikoloji
-**e-) Kriptoloji**
+a-)Sistem teorisi<br>
+b-)Oyun Teorisi<br>
+c-) Algısal Kontrol teorisi<br>
+d-) Nöropsikoloji<br>
+**e-) Kriptoloji**<br>
 
 
 #### 52. Kişinin hangi sitelere girdiği, ne kadar süre kaldığı gibi internet alışkanlıkları takip etmek için kullanılan dosyalara ne ad verilir?
 
-**a. Çerez**
-b. Faktör
-c. Lease
-d. Sistem
-e. Durum
+**a. Çerez**<br>
+b. Faktör<br>
+c. Lease<br>
+d. Sistem<br>
+e. Durum<br>
 
 #### 53. Güçlü bir şifrenin iki ana öğesi nedir?
 
-**a. Uzunluk ve karmaşıklık**
-b. Uyum ve dinamizm
-c. Sistem ve içerik
-d. Görünüm ve anlam
-e. Akıcılık ve içerik
+**a. Uzunluk ve karmaşıklık**<br>
+b. Uyum ve dinamizm<br>
+c. Sistem ve içerik<br>
+d. Görünüm ve anlam<br>
+e. Akıcılık ve içerik<br>
 
 
 #### 54. Bilgisayara İnternetten erişimi denetleyen, kısıtlayan, araçlara ne ad verilir?
 
-a. Yama
-b. Sistem Programları
-c. Eşgüdümleme
-d. Durumsal Program
-e. Güvenlik Duvarı  ***
+a. Yama<br>
+b. Sistem Programları<br>
+c. Eşgüdümleme<br>
+d. Durumsal Program<br>
+**e. Güvenlik Duvarı**<br>
 
 #### 55)	Bilgiler geçici olarak hangi bellek üzerinde tutulur?
-A) Memory Card
-B) Hard disk
-C) Rom
-D) Ram
+A) Memory Card<br>
+B) Hard disk<br>
+C) Rom<br>
+D) Ram<br>
 
 #### 56)	Kullanıcının müdahale edemediği,  bellek türü hangisidir?
-A) Rom
-B) Ram
-C) Sd Ram
-D) Hiçbiri
+A) Rom<br>
+B) Ram<br>
+C) Sd Ram<br>
+D) Hiçbiri<br>
 
 #### 57)	Aşağıdakilerden hangisi hem girdi hem çıktı birimidir?
-A) Flash Bellek
-B) ROM Bellek
-C) Ekran Kartı
-D) Ekran
+A) Flash Bellek<br>
+B) ROM Bellek<br>
+C) Ekran Kartı<br>
+D) Ekran<br>
 
 #### 58)	Elektrikler kesildiği zaman üzerindeki bilgiler silinen bellek türü aşağıdakilerden hangisidir?
 
-A) RAM Bellek
-B) ROM Bellek
-C) FLASH Bellek
-D) YAN Bellek
+A) RAM Bellek<br>
+B) ROM Bellek<br>
+C) FLASH Bellek<br>
+D) YAN Bellek<br>
 
 #### 59) Aşağıdakilerden hangisi bilişim suçları ile ilgili olan kavramlardan değildir?
 
-A) DOMAİN
-B)SERVER
-C)FTP ( File Transfer Protocol)
-D)IP numarası
-E)HOSTİNG
+A) DOMAİN<br>
+B)SERVER<br>
+C)FTP ( File Transfer Protocol)<br>
+D)IP numarası<br>
+E)HOSTİNG<br>
 
 #### 60)	’Devletin güvenliğine ve kamu barışına karşı işlenen suçlar ; sanal ortamda işlendiğinde verilecek cezalar yarı oranında arttırılacak’ aşağıdakilerden hangisi bu suçlardan birisidir?
-A)Bilişim ağındaki verileri hukuka aykırı bir şekilde izlemek
-B)Kamu kurumlarıyla gerçek ve tüzel kişilerin hizmet veya kimliğini taklit etmek
-C)Toplu yaramaz ileti göndermek
-D)Bir bilişim sistemine girerek, veri veya programları elde etmek
-E)Atatürk’e hakaret etmek
+
+A)Bilişim ağındaki verileri hukuka aykırı bir şekilde izlemek<br>
+B)Kamu kurumlarıyla gerçek ve tüzel kişilerin hizmet veya kimliğini taklit etmek<br>
+C)Toplu yaramaz ileti göndermek<br>
+D)Bir bilişim sistemine girerek, veri veya programları elde etmek<br>
+E)Atatürk’e hakaret etmek<br>
 
 #### 61)	Aşağıdakilerden hangisi Computer Ethics  Institute (Bilgisayar Etik Enstitüsü) tarafından geliştirilen ve bilgisayar kullanım etik ilkelerini oluşturan temel  ilkeler  arasında değildir?
 
-A)Bedeli ödenmeyen yazılım kopyalanmaz ve kullanılamaz
-B)Başka insanların bilgisayar kaynakları izin almadan kullanılamaz
-C)Kişi yazdığı programın sosyal hayata etkilerini dikkate almalıdır
-D)İyelik haklarını zedelememeye özen göstererek, başkasının veri kaynaklarını ve düşüncelerini , yazılımlarını kendimizinmiş gibi sahiplenmeye kalkışmamalıyız
-E)Başka insanların bilgisayar çalışmaları karıştırılamaz
+A)Bedeli ödenmeyen yazılım kopyalanmaz ve kullanılamaz<br>
+B)Başka insanların bilgisayar kaynakları izin almadan kullanılamaz<br>
+C)Kişi yazdığı programın sosyal hayata etkilerini dikkate almalıdır<br>
+D)İyelik haklarını zedelememeye özen göstererek, başkasının veri kaynaklarını ve düşüncelerini , yazılımlarını kendimizinmiş gibi sahiplenmeye kalkışmamalıyız<br>
+E)Başka insanların bilgisayar çalışmaları karıştırılamaz<br>
 
 #### 62) Hangisi parmak izi tanımanın dezavantajlarından biridir?
 
-a) Tek yumurta ikizlerinin parmak izlerinin aynı olması
-b) Kilo almanın parmak izini bozabilmesi
-c) Çok büyük işlem gücü gerektirmesi
-d) Zahmetli olması
-e) Masraflı olması
-63) İris tanımada yapılan işlem nedir?
-a)	İris üzerinde belirli izleri bulmak
-b)	İristeki damar haritasını çıkarmak
-c)	İrisin tamamını saklayıp doğrulama istendiğinde karşılaştırmak
-d)	İrisin belirli parçalarını saklamak ve doğrulama istendiğinde karşılaştırmak
-e)	İrisin belirli kısımlarının uzunluklarını saklamak
+a) Tek yumurta ikizlerinin parmak izlerinin aynı olması<br>
+b) Kilo almanın parmak izini bozabilmesi<br>
+c) Çok büyük işlem gücü gerektirmesi<br>
+d) Zahmetli olması<br>
+e) Masraflı olması<br>
+
+#### 63) İris tanımada yapılan işlem nedir?
+a)	İris üzerinde belirli izleri bulmak<br>
+b)	İristeki damar haritasını çıkarmak<br>
+c)	İrisin tamamını saklayıp doğrulama istendiğinde karşılaştırmak<br>
+d)	İrisin belirli parçalarını saklamak ve doğrulama istendiğinde karşılaştırmak<br>
+e)	İrisin belirli kısımlarının uzunluklarını saklamak<br>
 
 #### 64) Kişilerin taklit edilemediği tanıma yöntemi hangisidir?
 
-a)	Parmak izi
-b)	Yüz
-c)	Damar haritası
-d)	İris
-e)	Fizyolojik faktörler
+a)	Parmak izi<br>
+b)	Yüz<br>
+c)	Damar haritası<br>
+d)	İris<br>
+e)	Fizyolojik faktörler<br>
 
 #### 65) BIOS’un açılışta donanımları kontrol etmesine ne ad verilir?
 
-a) Setup
-b) POST
-c) CMOS
-d) Bios pili
+a) Setup<br>
+b) POST<br>
+c) CMOS<br>
+d) Bios pili<br>
 
 #### 66) Aşağıdakilerden hangisi POST(Power On Self Test) sırasında yapılan kontrollerden biri değildir?
 
-a)   Ekran kartını test eder
-b)   RAM belleği kontrol eder
-c)   Klavyenin kontrolünü yapar
-d)   İşletim sistemini çalıştırır
+a)   Ekran kartını test eder<br>
+b)   RAM belleği kontrol eder<br>
+c)   Klavyenin kontrolünü yapar<br>
+d)   İşletim sistemini çalıştırır<br>
 
 #### 67) Aşağıdakilerden hangisi bir BIOS üreticisi değildir?
 
-a)Award
-b)Ami
-c)Phoenix
-d)Microsoft
+a)Award<br>
+b)Ami<br>
+c)Phoenix<br>
+d)Microsoft<br>
 
 #### 68) Aşağıdakilerden hangisi Ekran kartı arızasının sesli bildirimidir?
 
-a)Birçok kısa Bip
-b)1 uzun 3 kısa
-c)5 kısa
-d)4 kısa
+a)Birçok kısa Bip<br>
+b)1 uzun 3 kısa<br>
+c)5 kısa<br>
+d)4 kısa<br>
 
 #### 69) Bilgisayara genişleme yuvaları aracılığı ile yeni bir donanım eklediğimizde hangi birim(ler)de değişiklik yapmamız gerekir / gerekebilir ?
 
-a)İşlemci (CPU)  
-b)İşletim sistemi
-c)Bellek
-d)BIOS
+a)İşlemci (CPU)  <br>
+b)İşletim sistemi<br>
+c)Bellek<br>
+d)BIOS<br>
 
 #### 70. İlk mikroişlemci hangi firma tarafından üretilmiştir ve ismi nedir?
 
-A) Intel - 4001
-B) Motorola - 6008
-**C) Intel - 4004**
-D) Intel - 4000
-E) Zilog - Z80
+A) Intel - 4001<br>
+B) Motorola - 6008<br>
+**C) Intel - 4004**<br>
+D) Intel - 4000<br>
+E) Zilog - Z80<br>
 
 #### 71. İlk mikroişlemci kaç yılında üretilmiştir?
 
-A) 1967
-B) 1982
-**C) 1971**
-D) 1945
-E) 1975
+A) 1967<br>
+B) 1982<br>
+**C) 1971**<br>
+D) 1945<br>
+E) 1975<br>
 
 #### 72.Aşağıdakilerden hangisi mikroişlemcilerin görevlerinden değildir?
 
-A) Bilgisayarın diğer birimleriyle doğrudan ilişkili olmak.
-B) Makinadan gelen talimatları uygulayarak işlemciye ne yapması gerektiğini iletmek.
-C) Diğer birimlerin ne şekilde çalışacağını belirlemek.
-**D) Bilgisayarın fazla ısınmamasını sağlamak.**
-E) Bir bellekten diğerine veri nakletmek.
+A) Bilgisayarın diğer birimleriyle doğrudan ilişkili olmak.<br>
+B) Makinadan gelen talimatları uygulayarak işlemciye ne yapması gerektiğini iletmek.<br>
+C) Diğer birimlerin ne şekilde çalışacağını belirlemek.<br>
+**D) Bilgisayarın fazla ısınmamasını sağlamak.**<br>
+E) Bir bellekten diğerine veri nakletmek.<br>
 
 #### 73. Bilgisayardan mikroişlemciye veri aktarım düzenini sıralayınız.
 
@@ -528,33 +537,33 @@ E) Bir bellekten diğerine veri nakletmek.
 3. Makina Dili
 4. Yüksek Seviye Programlama Dili
 5. Uygulama
-
-A) 1-3-4-5-2
-B) 2-3-5-4-1
-C) 3-5-4-1-2
-**D) 5-4-2-1-3**
-E) 4-3-2-1-5
+<br>
+A) 1-3-4-5-2<br>
+B) 2-3-5-4-1<br>
+C) 3-5-4-1-2<br>
+**D) 5-4-2-1-3**<br>
+E) 4-3-2-1-5<br>
 
 #### 74.İnternet hangi işletim sistemi ile kişisel bilgisayarlarda yer almaya başlamıştır?
 
-A. Mac OS X
-B. Linux
-C. Unix
-**D. Windows 98**
-E. Windows 2000
+A. Mac OS X<br>
+B. Linux<br>
+C. Unix<br>
+**D. Windows 98**<br>
+E. Windows 2000<br>
 
 #### 75.Aşağıdakilerden hangisi İnternet protokol takımındaki katmanlar arasında yer almaz?
 
-A. Ağ Katmanı
-**B. İletişim Katmanı**
-C. Uygulama Katmanı
-D. Taşıma Katmanı
-E. Donanım Katmanı
+A. Ağ Katmanı<br>
+**B. İletişim Katmanı**<br>
+C. Uygulama Katmanı<br>
+D. Taşıma Katmanı<br>
+E. Donanım Katmanı<br>
 
 #### 76. Mac adresi ile ilgili aşağıda verilen bilgilerden hangisi yanlıştır?
 
-A. Bir cihazın ağ donanımını tanımaya yarar.
-B. Ethernet kartına üretici tarafından kodlanır.
-C. 6 oktetten oluşur.
-D. İlk 3 oktet donanımı üreten firmayı işaret eder.
-**E. Aynı MAC adresine sahip birden fazla ağ cihazı bulunabilir.**
+A. Bir cihazın ağ donanımını tanımaya yarar.<br>
+B. Ethernet kartına üretici tarafından kodlanır.<br>
+C. 6 oktetten oluşur.<br>
+D. İlk 3 oktet donanımı üreten firmayı işaret eder.<br>
+**E. Aynı MAC adresine sahip birden fazla ağ cihazı bulunabilir.**<br>
