--- a/Sorular/BMS-2015.md
+++ b/Sorular/BMS-2015.md
@@ -16,24 +16,24 @@ C)Abaküs<br>
 #### 3-İlk programcının adı nedir?
 A)Bill Gates<br>
 B)Steve Jobs<br>
-C)Ada Lovelace<br>
+**C)Ada Lovelace**<br>
 D)Blaise Pascal<br>
 
 #### 4-İlk bilgisayarın adı nedir?
-A)ENIAC<br>
+**A)ENIAC**<br>
 B)UNIVAC<br>
 C)MARK1<br>
 D)EDVAC<br>
 
 #### 5-Entegre devre elemanlarının kullanıldığı ilk bilgisayar hangisidir?
 
-A)	IBM 360<br>
+**A)	IBM 360**<br>
 B) IBM 700 SERİSİ<br>
 C) EDVAC<br>
 D) UNIVAC<br>
 
 #### 6-Aşağıdaki veri yollarından hangisi sadece ekran kartları içindir ?
-A)	AGP<br>
+**A)	AGP**<br>
 B)	ISA<br>
 C)	PCI<br>
 D)	PCI-x<br>
@@ -42,19 +42,19 @@ D)	PCI-x<br>
 
 A)	AT<br>
 B)	ATX<br>
-C)	BT<br>
+**C)	BT**<br>
 D)	BTX<br>
 
 #### 8-Aşağıdakilerden hangisi form factor (anakart boyutları) değildir?
 
 A)	ATX<br>
-B)	AGP<br>
+**B)	AGP**<br>
 C)	Mini-ATX<br>
 D)	BTX<br>
 
 #### 9-Bilgisayarın tüm parçalarının takıldığı donanım birimi asağıdakilerden hangisidir?
 
-a)	Anakart<br>
+**a)	Anakart**<br>
 b)	Ses Kartı<br>
 c)	İşlemci<br>
 d)	Ekran Kartı<br>
@@ -64,7 +64,7 @@ d)	Ekran Kartı<br>
 a)	ISA<br>
 b)	PCI<br>
 c)	Veri Yolu<br>
-d)	Yonga Seti<br>
+**d)	Yonga Seti**<br>
 
 #### 11-Aşağıdakilerden hangisi bilgisayarı virüslere karşı korur ?
 
@@ -244,7 +244,7 @@ D)Yük Testi<br>
 **E)Barok testi**<br>
 
 #### 35-) Yıldız (star) topolojisinin şekli şağıdakilerden hangisidir?
-
+![](https://github.com/PAU-Projects/BMS/blob/master/Sorular/BMS-2015.md)
 **Cevap :C**
 
 #### 36-) Aşağıdakilerden hangisi bilgisayar ağlarının avantajlarından değildir?
