--- a/Sorular/BMS-2015.md
+++ b/Sorular/BMS-2015.md
@@ -403,23 +403,23 @@ d. Durumsal Program<br>
 A) Memory Card<br>
 B) Hard disk<br>
 C) Rom<br>
-D) Ram<br>
+**D) Ram**<br>
 
 #### 56)	Kullanıcının müdahale edemediği,  bellek türü hangisidir?
-A) Rom<br>
+**A) Rom**<br>
 B) Ram<br>
 C) Sd Ram<br>
 D) Hiçbiri<br>
 
 #### 57)	Aşağıdakilerden hangisi hem girdi hem çıktı birimidir?
-A) Flash Bellek<br>
+**A) Flash Bellek**<br>
 B) ROM Bellek<br>
 C) Ekran Kartı<br>
 D) Ekran<br>
 
 #### 58)	Elektrikler kesildiği zaman üzerindeki bilgiler silinen bellek türü aşağıdakilerden hangisidir?
 
-A) RAM Bellek<br>
+**A) RAM Bellek**<br>
 B) ROM Bellek<br>
 C) FLASH Bellek<br>
 D) YAN Bellek<br>
@@ -428,7 +428,7 @@ D) YAN Bellek<br>
 
 A) DOMAİN<br>
 B)SERVER<br>
-C)FTP ( File Transfer Protocol)<br>
+**C)FTP ( File Transfer Protocol)**<br>
 D)IP numarası<br>
 E)HOSTİNG<br>
 
@@ -438,20 +438,20 @@ A)Bilişim ağındaki verileri hukuka aykırı bir şekilde izlemek<br>
 B)Kamu kurumlarıyla gerçek ve tüzel kişilerin hizmet veya kimliğini taklit etmek<br>
 C)Toplu yaramaz ileti göndermek<br>
 D)Bir bilişim sistemine girerek, veri veya programları elde etmek<br>
-E)Atatürk’e hakaret etmek<br>
+**E)Atatürk’e hakaret etmek**<br>
 
 #### 61)	Aşağıdakilerden hangisi Computer Ethics  Institute (Bilgisayar Etik Enstitüsü) tarafından geliştirilen ve bilgisayar kullanım etik ilkelerini oluşturan temel  ilkeler  arasında değildir?
 
 A)Bedeli ödenmeyen yazılım kopyalanmaz ve kullanılamaz<br>
 B)Başka insanların bilgisayar kaynakları izin almadan kullanılamaz<br>
 C)Kişi yazdığı programın sosyal hayata etkilerini dikkate almalıdır<br>
-D)İyelik haklarını zedelememeye özen göstererek, başkasının veri kaynaklarını ve düşüncelerini , yazılımlarını kendimizinmiş gibi sahiplenmeye kalkışmamalıyız<br>
+**D)İyelik haklarını zedelememeye özen göstererek, başkasının veri kaynaklarını ve düşüncelerini , yazılımlarını kendimizinmiş gibi sahiplenmeye kalkışmamalıyız**<br>
 E)Başka insanların bilgisayar çalışmaları karıştırılamaz<br>
 
 #### 62) Hangisi parmak izi tanımanın dezavantajlarından biridir?
 
 a) Tek yumurta ikizlerinin parmak izlerinin aynı olması<br>
-b) Kilo almanın parmak izini bozabilmesi<br>
+**b) Kilo almanın parmak izini bozabilmesi**<br>
 c) Çok büyük işlem gücü gerektirmesi<br>
 d) Zahmetli olması<br>
 e) Masraflı olması<br>
@@ -460,21 +460,21 @@ e) Masraflı olması<br>
 a)	İris üzerinde belirli izleri bulmak<br>
 b)	İristeki damar haritasını çıkarmak<br>
 c)	İrisin tamamını saklayıp doğrulama istendiğinde karşılaştırmak<br>
-d)	İrisin belirli parçalarını saklamak ve doğrulama istendiğinde karşılaştırmak<br>
+**d)	İrisin belirli parçalarını saklamak ve doğrulama istendiğinde karşılaştırmak**<br>
 e)	İrisin belirli kısımlarının uzunluklarını saklamak<br>
 
 #### 64) Kişilerin taklit edilemediği tanıma yöntemi hangisidir?
 
 a)	Parmak izi<br>
 b)	Yüz<br>
-c)	Damar haritası<br>
+**c)	Damar haritası**<br>
 d)	İris<br>
 e)	Fizyolojik faktörler<br>
 
 #### 65) BIOS’un açılışta donanımları kontrol etmesine ne ad verilir?
 
 a) Setup<br>
-b) POST<br>
+**b) POST**<br>
 c) CMOS<br>
 d) Bios pili<br>
 
@@ -483,19 +483,19 @@ d) Bios pili<br>
 a)   Ekran kartını test eder<br>
 b)   RAM belleği kontrol eder<br>
 c)   Klavyenin kontrolünü yapar<br>
-d)   İşletim sistemini çalıştırır<br>
+**d)   İşletim sistemini çalıştırır**<br>
 
 #### 67) Aşağıdakilerden hangisi bir BIOS üreticisi değildir?
 
 a)Award<br>
 b)Ami<br>
 c)Phoenix<br>
-d)Microsoft<br>
+**d)Microsoft**<br>
 
 #### 68) Aşağıdakilerden hangisi Ekran kartı arızasının sesli bildirimidir?
 
 a)Birçok kısa Bip<br>
-b)1 uzun 3 kısa<br>
+**b)1 uzun 3 kısa**<br>
 c)5 kısa<br>
 d)4 kısa<br>
 
@@ -504,7 +504,7 @@ d)4 kısa<br>
 a)İşlemci (CPU)  <br>
 b)İşletim sistemi<br>
 c)Bellek<br>
-d)BIOS<br>
+**d)BIOS**<br>
 
 #### 70. İlk mikroişlemci hangi firma tarafından üretilmiştir ve ismi nedir?
 
