--- a/Sorular/BMS-2015.md
+++ b/Sorular/BMS-2015.md
@@ -177,8 +177,13 @@ b-) Orta Seviye Diller<br>
 d-)Yapay Diller<br>
 e-)En Üst Seviye Diller<br>
 
-#### 26-)  I-HDD      II-RAM      III-Flash Bellek
+#### 26-)  
+I-HDD<br>
+II-RAM<br>
+III-Flash Bellek<br>
+
 Yukarılardan hangileri kalıcı hafıza elemanıdır?  
+
 A) Yalnız I<br>
 B) II – III<br>
 C) I – II<br>
