--- a/Sorular/BMS-2015.md
+++ b/Sorular/BMS-2015.md
@@ -572,3 +572,7 @@ B. Ethernet kartına üretici tarafından kodlanır.<br>
 C. 6 oktetten oluşur.<br>
 D. İlk 3 oktet donanımı üreten firmayı işaret eder.<br>
 **E. Aynı MAC adresine sahip birden fazla ağ cihazı bulunabilir.**<br>
+
+---------
+## 2. Grub sorular (Emre Hoca)
+-------
